// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User payment API GET /user-payments should return list of user-payments 1`] = `
Array [
  Object {
    "testdata": "shared",
  },
]
`;

exports[`User payment API GET /user-payments/1 should return 200 when user is in db 1`] = `
Object {
  "testData": "shared",
}
`;

exports[`User payment API POST /user-payments should return 200 1`] = `
Object {
  "paid": true,
}
`;

exports[`User payment API PUT /user-payments should return 200 and creates new user if does not exist already 1`] = `
Object {
  "paid": true,
}
`;

exports[`User payment API PUT /user-payments should return 204 1`] = `Object {}`;
